--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,12 +1,12 @@
-
-
 .bodyArea{
   display: flex;
   flex-direction: column;
-  background-color: rgb(67, 67, 67);
-  width: 100vw;
-  height: 100%;
+  background-color: rgb(5, 5, 5);
+  width: 100%;
+  height: 100vh;
 }
+
+/*header*/
 
 .headerArea{
   display: flex;
@@ -14,9 +14,9 @@
   align-items: center;
   width: 100vw;
   height: 100px;
-  background-color: rgb(67, 67, 67);
+  background-color: rgb(0, 0, 0);
   border: 0;
-  box-shadow: 0 0 40px 0 black;
+  box-shadow: -0px 0px 40px 6px rgb(75, 5, 165);
   color: white;
   
 }
@@ -25,63 +25,135 @@
   position: fixed
 }
 
+/*main*/
+
 .mainGrid{
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(4, minmax(0px, 250px));
+  grid-template-columns: repeat(4, 300px);
   justify-content: center;
   align-items: center;
   gap: 15px;
   padding-top: 100px;
+  overflow-x: hidden;
 }
 
-.info{
-  height: 150px;
+::-webkit-scrollbar{
+  background-color: rgb(36, 36, 36);
+  width: 8px;
 }
 
-img{
-  width: 100%;
-  height: 200px;
-  
+::-webkit-scrollbar-thumb{
+  background-color: rgb(75, 5, 165);
 }
+
+/*item*/
 
 .item{
   display: flex;
   flex-direction: column;
   width: 250px;
-  height: 100%;
-  color: white;
+  height: 600px;  
   font-weight: bold;
-  margin: 15px;
-  padding: 0;
 }
 
-p span{
-  color: greenyellow;
-  
+.infoLink{
+  text-decoration: none;
+  max-width: 100%;
+}
+
+.item .inforArea span{
+  text-decoration: line-through;
+}
+
+.info{
+  font-size: 13px;
+  color: red;
+}
+
+.newPriceArea p{
+  font-size: 25px;
+  color: rgb(30, 255, 0);
+  margin: 0;
+}
+
+.newPriceArea span{
+  font-size: 12px;
+  color: rgb(30, 255, 0);
+  margin: 0;
+}
+
+
+
+p{
+  color: white;
+}
+
+.imageArea{
+
+  width: 100%;
+}
+
+.imageArea img{
+  width: 100%;
+  height: 200px;
+}
+
+.inforArea{
+  min-height: 150px;
+}
+
+.infoItem{
+height: 100px;
+}
+
+
+.pixValue p{
+  color: white;
+  font-size: 13px;
+}
+
+.pixValue .discount{
+  font-size: 11px;
+}
+
+.line{
+  height: 3px;
+  width: 40px;
+  background-color: rgb(75, 5, 165);
+  margin: 5px 0 20px 0;
+}
+
+.pixValue p span{
+  font-size: 13px;
+}
+
+.pixValue span{
+  color: red;
+  font-size: 20px;
 }
 
 /* Menu Area */
 .menuArea{
   position: fixed;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  justify-content: center;
   align-items: center;
   width: 200px;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.741);
+  background-color: rgba(0, 0, 0, 0.512);
   overflow: hidden;
   transition: all ease .4s;
 }
 
 .menuAreaActive{
   position: fixed;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  justify-content: center;
   align-items: center;
   width: 00px;
   height: 100%;
-  background-color: black;
+  background-color: rgb(80, 0, 159);
   overflow: hidden;
   transition: all ease .4s;
 }
@@ -101,13 +173,21 @@ li{list-style-type: none;}
   height: 50px;
   width: 200px;
   margin-left: 15px;
-  background-color: rgb(47, 0, 91);
+  background-color: rgb(75, 5, 165);
   color: white;
   border: 0;
-  border-radius: 2px;
+  border-radius: 1px;
   font-family: Arial;
   font-weight: bold;
   cursor: pointer;
+  transition: all ease .3s;
+}
+
+.menuButton:hover{
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  background: rgb(75, 5, 165);
+  box-shadow: 0 0 20px 5px rgb(75, 5, 165);
 }
 
 .carButton{
@@ -117,16 +197,16 @@ li{list-style-type: none;}
   background-color: rgb(7, 190, 16);
   color: white;
   border: 0;
-  border-radius: 2px;
+  border-radius: 1px;
   font-family: Arial;
   font-weight: bold;
   cursor: pointer;
 }
 
 .buyButton{
-  width: 400px;
+  width: 300px;
   height: 40px;
-  border-radius: 7px;
+  border-radius: 1px;
   border: 0;
   background-color: greenyellow;
   color: white;
@@ -138,10 +218,12 @@ li{list-style-type: none;}
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(67, 67, 67);
+  background-color: rgb(3, 3, 3);
   width: 100vw;
   height: 100vh;
 }
+
+/*product*/
 
 .leftArea{
   display: flex;
@@ -164,6 +246,10 @@ li{list-style-type: none;}
   width: 25%;
   height: 100%;
   color: white;
+  background-color: rgb(56, 56, 56);
+  width: 400px;
+  min-height: 200px;
+  padding: 15px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
